Added more info

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,25 @@
 @{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "NJKING'S CONSTRUCTION SERVICES";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>@ViewData["Title"]</h2>
 
-<p>Use this area to provide additional information.</p>
+
+<p><strong>NJKING'S CONSTRUCTION SERVICES</strong> is a 100% Filipino owned company, duly licensed to 
+    engage in the business of CONSTRUCTION SERVICES such as construction of buildings, 
+    line canal, grouted riprap, roads and other related activities. </p>
+
+<p>
+<strong>NJKING'S CONSTRUCTION SERVICES</strong> is committed to do the work rapidly and efficiently at a 
+fraction of it's competitor's prices while maintaining the highest level of quality and
+client satisfaction at all times.
+</p>
+
+<p><strong>NJKING'S CONSTRUCTION SERVICES</strong> always considers the safety of our workers, quality
+of our construction, effective and efficient cost to the expectations of it's clients to a beneficial
+undertakings.
+</p>
+
+<p>
+    The overheads are kept to an absolute minimum in order to offer the client a service that is
+    both competitive and of the highest professional standards.
+</p>
