--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
             <img src="~/images/sample1.jpg" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
+                    
                     <!--<a class="btn btn-default" href="#">
                         Learn More
                     </a>-->
@@ -36,7 +36,6 @@
             <img src="~/images/sample2.jpg" alt="Package Management" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
                     <!--<a class="btn btn-default" href="#">
                         Learn More
                     </a>-->
@@ -47,8 +46,7 @@
             <img src="~/images/sample3.jpg" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <!--<a class="btn btn-default" href="#">
+                <!--<a class="btn btn-default" href="#">
                         Learn More
                     </a>-->
                 </p>
@@ -66,27 +64,29 @@
 </div>
 
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-6">
         <h2>About Us</h2>
-        <ul>
+        <p>
+            <strong>NJKING'S CONSTRUCTION SERVICES</strong> is a 100% Filipino owned company committed to provide services
+            at a minimum cost while maintaining the highest level of quality and client satisfaction at all times.
+        </p>
+        <!--<ul>
             <li>Sample pages using ASP.NET Core MVC</li>
             <li><a href="https://go.microsoft.com/fwlink/?LinkId=518007">Gulp</a> and <a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
             <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+        </ul>-->
     </div>
-    <div class="col-md-3">
+    <div class="col-md-6">
         <h2>Services We Provide</h2>
         <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699562">Add an appsetting in config and access it in app.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
+            <li><a href="#">Building Construction</a></li>
+            <li><a href="#">Line Canal</a></li>
+            <li><a href="#">Grouted RipRap</a></li>
+            <li><a href="#">Roads</a></li>
+            <li><a href="#">Other related activities</a></li>
         </ul>
     </div>
-    <div class="col-md-3">
+    <!--<div class="col-md-3">
         <h2>Overview</h2>
         <ul>
             <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
@@ -105,5 +105,5 @@
             <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
             <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
         </ul>
-    </div>
+    </div>-->
 </div>
