--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -5,13 +5,15 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    NJ Contruction Services<br />
+    Zone 9 Macanhan Carmen<br />
+    Cagayan de Oro City, Philippines 9000 <br/>
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    09261055673<br/>
+    <abbr title="Phone">P:</abbr>
+    09335230842
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong> <a href="mailto:njkings@gmail.com">njkings@gmail.com</a><br />
 </address>
