--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - myFirstApp</p>
+            <p>&copy; 2016 - Designed by Levy Kohout</p>
         </footer>
     </div>
 
