contact on front page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
         <h2>About Us</h2>
         <p>
             <strong>NJKING'S CONSTRUCTION SERVICES</strong> is a 100% Filipino owned company committed to provide services
@@ -76,7 +76,7 @@
             <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
         </ul>-->
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <h2>Services We Provide</h2>
         <ul>
             <li><a href="#">Building Construction</a></li>
@@ -86,24 +86,19 @@
             <li><a href="#">Other related activities</a></li>
         </ul>
     </div>
-    <!--<div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
+    <div class="col-md-4">
+        <<address>
+    NJ Contruction Services<br />
+    Zone 9 Macanhan Carmen<br />
+    Cagayan de Oro City, Philippines 9000 <br/>
+    <abbr title="Phone">P:</abbr>
+    09261055673<br/>
+    <abbr title="Phone">P:</abbr>
+    09335230842
+</address>
+
+<address>
+    <strong>Email:</strong> <a href="mailto:njkings@gmail.com">njkings@gmail.com</a><br />
+</address>
     </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>-->
-</div>
+   
