--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -87,7 +87,8 @@
         </ul>
     </div>
     <div class="col-md-4">
-        <<address>
+        <h2>Contact Us</h2>
+        <address>
     NJ Contruction Services<br />
     Zone 9 Macanhan Carmen<br />
     Cagayan de Oro City, Philippines 9000 <br/>
