added contact form

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,8 +1,25 @@
 @{
     ViewData["Title"] = "Contact";
 }
-<h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
+
+
+
+<!--<form asp-action="Create">
+	<div class="row">
+		<label asp-for="name">Your name:</label><br />
+		<input asp-for="name" class="form-control"/><br />
+	</div>
+	<div class="row">
+		<label asp-for="email">Your email:</label><br />
+		<input asp-for="email" class="form-control" /><br />
+	</div>
+	<div class="row">
+		<label asp-for="message">Your message:</label><br />
+		<textarea asp-for="message" class="form-control" ></textarea><br />
+	</div>
+	<input class = "btn btn-primary" type="submit" value="Send email" />
+</form>			-->
 
 <address>
     NJ Contruction Services<br />
