--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/finished1.jpg" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/finished1.jpg" alt="" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     Finished project sample
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/sample1.jpg" alt="Visual Studio" class="img-responsive" />
+            <img src="~/images/sample1.jpg" alt="" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/sample2.jpg" alt="Package Management" class="img-responsive" />
+            <img src="~/images/sample2.jpg" alt="" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     <!--<a class="btn btn-default" href="#">
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/sample3.jpg" alt="Microsoft Azure" class="img-responsive" />
+            <img src="~/images/sample3.jpg" alt="" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                 <!--<a class="btn btn-default" href="#">
@@ -78,12 +78,12 @@
     </div>
     <div class="col-md-4">
         <h2>Services We Provide</h2>
-        <ul>
-            <li><a href="#">Building Construction</a></li>
-            <li><a href="#">Line Canal</a></li>
-            <li><a href="#">Grouted RipRap</a></li>
-            <li><a href="#">Roads</a></li>
-            <li><a href="#">Other related activities</a></li>
+        <ul class ="un-styled list">
+            <li>Building Construction</li>
+            <li>Line Canal</li>
+            <li>Grouted RipRap</li>
+            <li>Roads</li>
+            <li>Other related activities</li>
         </ul>
     </div>
     <div class="col-md-4">
