--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,10 +23,15 @@ textarea {
     line-height: 1.4;
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
+
 .carousel-inner .item img[src$=".jpg"]
 {
     width: 100%;
+    
+}
+
+.img-responsive {
+height:500px !important;
 }
 
 /* Hide/rearrange for smaller screens */
